--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "web-tree-sitter": "^0.23.0",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://htfy96.github.io/ts-visualizer",
   "scripts": {
     "start": "craco start",
     "build": "craco build",
