--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,17 +2,30 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
 permissions:
   contents: write
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v4.0.4
-    - uses: actions/checkout@v3
-    - name: Build and Deploy React app to GitHub Pages
-      uses: omkartapale/react-deployment-gh-pages@v1.0.0
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4.0.4
+      - uses: actions/checkout@v3
+      - run: npm i
+        shell: bash
+      - run: npm ci
+        shell: bash
+      - run: npm run build
+        shell: bash
+      - run: git config user.name github-actions
+        shell: bash
+      - run: git config user.email github-actions@github.com
+        shell: bash
+      - run: git --work-tree build add --all
+        shell: bash
+      - run: git commit -m "Automatic Build and Deploy run by GitHub Actions"
+        shell: bash
+      - run: git push origin HEAD:gh-pages --force
+        shell: bash
